# pages

./: .dir-locals.el  .gitignore  AGENTS.md  LICENSE  Makefile  README.md  README.org  ajd.lua  index.org  sandbox.org  setup.sh  stationery.org
diagrams/: pipeline.typ  sandbox-runtime.typ  sandbox.typ
docs/: CNAME  document.css  index.html  sandbox.html  stationery.html  style.css
plots/: ajd.py  heatmap.py  index.py  pyproject.toml  taxi.py
style/: ajd.mplstyle  ajd.typ  document.css
